--- a/www/start.html
+++ b/www/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 	<head>
 		<meta charset="utf-8">
-		<title>Ginger Cliente</title>
+		<title>PickWin</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
 		<meta http-equiv="cleartype" content="on">
