--- a/www/lobby.html
+++ b/www/lobby.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Lobby | Pickwin</title>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<header class="clearfix">
