--- a/www/maqueta/registro.html
+++ b/www/maqueta/registro.html
@@ -5,12 +5,14 @@
 		<script src="js/functions.js" type="text/javascript"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
 	</head>
 	<body>
 		<div class="container registro">
 			<div class="splash_logo">
 				<img src="images/tuprimeravez.png">
-				<p>Regístrate y te regalamos la entrada  a las quinielas Tu Primera Vez, además te regalamos 100 Picoins para que comiences a jugar.</p>
+				<p>Regístrate y te regalamos la entrada  a las quinielas Tu Primera Vez, además te regalamos 100 Picoins  para que comiences a jugar.</p>
 			</div>
 			<a href=""><img class="fb_registry" src="images/fb_registry.png"></a>
 
