--- a/www/maqueta/registro_exitoso.html
+++ b/www/maqueta/registro_exitoso.html
@@ -5,6 +5,8 @@
 		<script src="js/functions.js" type="text/javascript"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
 	</head>
 	<body>
 		<div class="container registro_exitoso">
