css fix for width

--- a/www/maqueta/activacion.html
+++ b/www/maqueta/activacion.html
@@ -10,13 +10,15 @@
 	</head>
 	<body>
 		<div class="container activacion">
-			<div class="splash_logo">
-				<h3>ACTIVACIÓN DE CUENTA</h3>
-				<br>
-				<h3>¡FELICIDADES!</h3>
-				<p>Tu cuenta ha sido activada exitosamente.</p>
-				
-			<a href=""><img class="comenzar" src="images/comenzar.png"></a>
+			<div class="content">
+				<div class="splash_logo">
+					<h3>ACTIVACIÓN DE CUENTA</h3>
+					<br>
+					<h3>¡FELICIDADES!</h3>
+					<p>Tu cuenta ha sido activada exitosamente.</p>
+					<a href=""><img class="comenzar" src="images/comenzar.png"></a>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
