--- a/www/maqueta/lobby.html
+++ b/www/maqueta/lobby.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
 	</head>
 	<body>
-		<div class="container clearfix">
+		<div class="container clearfix lobby">
 			<div class="header clearfix">
 				<div class="header_left">
 					<img src="images/logo.png">
@@ -17,7 +17,7 @@
 				<div class="header_right clearfix">
 					<div class="header_user_info">
 						<div class="user_info">
-							<img src="images/profile_placeholder">
+							<img src="images/profile_placeholder.png">
 							<h2>Lorem Ipsum Dolor Sit</h2>
 						</div>
 						<div class="user_money">
@@ -32,6 +32,8 @@
 						</div>
 					</div>
 					<div class="header_filtros">
+						<h4>FILTROS</h4>
+						<img src="images/filtros.png">
 					</div>
 				</div>
 			</div>
