--- a/www/maqueta/registro_exitoso.html
+++ b/www/maqueta/registro_exitoso.html
@@ -10,13 +10,15 @@
 	</head>
 	<body>
 		<div class="container registro_exitoso">
-			<div class="splash_logo">
-				<h3>¡REGISTRO EXITOSO!</h3>
-				<p>Gracias por registrarte en Pickwin, es necesario que actives tu cuenta para poder comenzar a jugar.</p>
-				<p>Hemos enviado a la dirección de correo electrónico con la que te registraste un mensaje con la información necesaria para activar tu cuenta.</p>
-				<p>Revisa tu bandeja de entrada y de spam, ¡Gracias!</p>
+			<div class="content">
+				<div class="splash_logo">
+					<h3>¡REGISTRO EXITOSO!</h3>
+					<p>Gracias por registrarte en Pickwin, es necesario que actives tu cuenta para poder comenzar a jugar.</p>
+					<p>Hemos enviado a la dirección de correo electrónico con la que te registraste un mensaje con la información necesaria para activar tu cuenta.</p>
+					<p>Revisa tu bandeja de entrada y de spam, ¡Gracias!</p>
+				</div>
+				<a href=""><img class="enviarcodigo" src="images/enviarcodigo.png"></a>
 			</div>
-			<a href=""><img class="enviarcodigo" src="images/enviarcodigo.png"></a>
 		</div>
 	</body>
 </html>
