--- a/www/maqueta/lobby.html
+++ b/www/maqueta/lobby.html
@@ -11,32 +11,34 @@
 	<body>
 		<div class="container clearfix lobby">
 			<div class="header clearfix">
-				<div class="header_left">
-					<img src="images/logo.png">
-				</div>
-				<div class="header_right clearfix">
-					<div class="header_user_info">
-						<div class="user_info">
-							<img src="images/profile_placeholder.png">
-							<h2>Lorem Ipsum Dolor Sit</h2>
-						</div>
-						<div class="user_money">
-							<div class="money_pesos">
-								<img src="images/billete.png">
-								<span class="money_ammount">
+				<div class="content clearfix">
+					<div class="header_left">
+						<img src="images/logo.png">
+					</div>
+					<div class="header_right clearfix">
+						<div class="header_user_info clearfix">
+							<div class="user_info clearfix">
+								<img src="images/profile_placeholder.png">
+								<h2>Lorem Ipsum Dolor</h2>
 							</div>
-							<div class="money_pickcoins">
-								<img src="images/pickcoin.png">
-								<span class="money_ammount">
+							<div class="user_money clearfix">
+								<div class="money_pesos clearfix">
+									<img src="images/billete.png">
+									<span class="money_ammount">$1,235</span>
+								</div>
+								<div class="money_pickcoins clearfix">
+									<img src="images/pickcoin.png">
+									<span class="money_ammount">$1,234</span>
+								</div>
 							</div>
+						</div><!-- header_user_info -->
+						<div class="header_filtros">
+							<h4>FILTROS</h4>
+							<img src="images/filtros.png">
 						</div>
 					</div>
-					<div class="header_filtros">
-						<h4>FILTROS</h4>
-						<img src="images/filtros.png">
-					</div>
-				</div>
-			</div>
-		</div>
+				</div><!-- content -->
+			</div><!-- header -->
+		</div><!-- container -->
 	</body>
 </html>
