--- a/www/start.html
+++ b/www/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 	<head>
 		<meta charset="utf-8">
-		<title>PickWin | Lobby</title>
+		<title>PickWin</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta http-equiv="cleartype" content="on">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
