lobby feed header fixed

--- a/www/maqueta/lobby.html
+++ b/www/maqueta/lobby.html
@@ -290,6 +290,11 @@
 				</a><!-- link_wrapper -->
 
 			</div><!-- content -->
+			<div class="menu clearfix">
+				<ul>
+					<li><a href=""></a>
+				</ul>
+			</div><!-- menu -->
 		</div><!-- container -->
 	</body>
 </html>
