menu con sprite y selected

--- a/www/maqueta/lobby.html
+++ b/www/maqueta/lobby.html
@@ -292,7 +292,11 @@
 			</div><!-- content -->
 			<div class="menu clearfix">
 				<ul>
-					<li><a href=""></a>
+					<li class="menu_lobby selected"><a href=""></a></li>
+					<li class="menu_quinielas"><a href=""></a></li>
+					<li class="menu_privadas"><a href=""></a></li>
+					<li class="menu_perfil"><a href=""></a></li>
+					<li class="menu_abonar"><a href=""></a></li>
 				</ul>
 			</div><!-- menu -->
 		</div><!-- container -->
