--- a/www/maqueta/registro_exitoso.html
+++ b/www/maqueta/registro_exitoso.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>registro exitoso</title>
+		<meta charset="utf-8">
 		<script src="js/jquery.js" type="text/javascript"></script>
 		<script src="js/functions.js" type="text/javascript"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
