--- a/www/start.html
+++ b/www/start.html
@@ -21,7 +21,9 @@
     <script type="text/javascript" src="views/partials/header.js"></script>
     <script type="text/javascript" src="views/partials/loader.js"></script>
     <script type="text/javascript" src="views/compiled/login.js"></script>
-    <script type="text/javascript" src="views/compiled/feed.js"></script>
+    <script type="text/javascript" src="views/compiled/register.js"></script>
+    <script type="text/javascript" src="views/compiled/register-success.js"></script>
+    <script type="text/javascript" src="views/compiled/lobby.js"></script>
 
     <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
 	<script type="text/javascript" src="js/plugins.js"></script>
