--- a/www/maqueta/lobby.html
+++ b/www/maqueta/lobby.html
@@ -40,7 +40,7 @@
 				</div><!-- content -->
 			</div><!-- header -->
 			<div class="content quinielas">
-
+				
 				<a class="link_wrapper" href="">
 					<div class="quiniela quiniela_live soccer natural garantizado clearfix">
 						<div class="quiniela_header clearfix">
@@ -300,5 +300,53 @@
 				</ul>
 			</div><!-- menu -->
 		</div><!-- container -->
+		<div class="filtros overlay clearfix">
+					<div class="filtros_moneda clearfix">
+						<h3>MONEDA</h3>
+						<ul class="clearfix">
+							<li data="todos_moneda"><h3>TODOS</h3></li>
+							<li data="money_moneda"><img src="images/billete.png"></li>
+							<li data="pickcoin_moneda"><img src="images/pickcoin.png"></li>
+						</ul>
+						<ul class="clearfix" id="money_moneda">
+							<li data="money_moneda"><img src="images/billete.png"></li>
+							<li data="money_moneda"><img src="images/bill2.png"></li>
+							<li data="money_moneda"><img src="images/bill3.png"></li>
+						</ul>
+						<ul class="clearfix" id="pickcoin_moneda">
+							<li data="money_moneda"><img src="images/pickcoin.png"></li>
+							<li data="money_moneda"><img src="images/pic2.png"></li>
+							<li data="money_moneda"><img src="images/pic3.png"></li>
+						</ul>
+					</div><!-- filtros_moneda -->
+					<div class="filtros_deporte clearfix">
+						<h3>DEPORTE</h3>
+						<ul class="clearfix">
+							<li data="todos_deporte"><h3>TODOS</h3></li>
+							<li data="deporte_soccer"><img src="images/soccer.png"></li>
+							<li data="deporte_basket"><img src="images/basket.png"></li>
+							<li data="deporte_baseball"><img src="images/baseball.png"></li>
+							<li data="deporte_nfl"><img src="images/nfl.png"></li>
+							<li data="deporte_golf"><img src="images/golf.png"></li>
+							<li data="deporte_tennis"><img src="images/tennis.png"></li>
+							<li data="deporte_f1"><img src="images/f1.png"></li>
+						</ul>
+					</div><!-- filtros_deporte -->
+					<div class="filtros_tipo clearfix">
+						<h3>TIPO</h3>
+						<ul class="clearfix">
+							<li data="tipo_abiertas"><h3>Abiertas</h3></li>
+							<li data="tipo_limitadas"><h3>Cupo limitado</h3></li>
+						</ul>
+					</div><!-- filtros_deporte -->
+					<div class="filtros_estado clearfix">
+						<h3>ESTADO</h3>
+						<ul class="clearfix">
+							<li data="estado_procimas"><h3>Próximas</h3></li>
+							<li data="estado_live"><h3>En curso</h3></li>
+							<li data="estado_finalizadas"><h3>Finalizadas</h3></li>
+						</ul>
+					</div><!-- filtros_deporte -->
+				</div><!-- filtros overlay -->
 	</body>
 </html>
