--- a/www/maqueta/lobby.html
+++ b/www/maqueta/lobby.html
@@ -301,7 +301,8 @@
 				</ul>
 			</div><!-- menu -->
 		</div><!-- container -->
-		<div class="filtros overlay clearfix">
+			<div class="filtros_wrapper">
+				<div class="filtros overlay clearfix">
 					<div class="filtros_moneda clearfix">
 						<h3>MONEDA</h3>
 						<ul class="clearfix">
@@ -332,6 +333,14 @@
 							<li data="deporte_tennis"><img src="images/tennis.png"></li>
 							<li data="deporte_f1"><img src="images/f1.png"></li>
 						</ul>
+						<ul class="clearfix" id="deporte_soccer">
+							<li data="soccer_todas"><span>Todas</span></li>
+							<li data="soccer_ligamx"><span>Liga MX</span></li>
+							<li data="soccer_copamx"><span>Copa MX</span></li>
+							<li data="soccer_laliga"><span>La Liga</span></li>
+							<li data="soccer_premier"><span>Premier</span></li>
+							<li class="selected" data="soccer_champions"><span>Champions</span></li>
+						</ul>
 					</div><!-- filtros_deporte -->
 					<div class="filtros_tipo clearfix">
 						<h3>TIPO</h3>
@@ -349,5 +358,6 @@
 						</ul>
 					</div><!-- filtros_deporte -->
 				</div><!-- filtros overlay -->
+			</div>
 	</body>
 </html>
