--- a/www/maqueta/lobby.html
+++ b/www/maqueta/lobby.html
@@ -3,6 +3,7 @@
 		<title>lobby</title>
 		<meta charset="utf-8">
 		<script src="js/jquery.js" type="text/javascript"></script>
+		<script src="js/easing.js" type="text/javascript"></script>
 		<script src="js/functions.js" type="text/javascript"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -359,5 +360,153 @@
 					</div><!-- filtros_deporte -->
 				</div><!-- filtros overlay -->
 			</div>
+
+			<div class="misquinielas overlay">
+				<a class="link_wrapper" href="">
+					<div class="quiniela quiniela_open soccer natural garantizado clearfix">
+						<div class="quiniela_header clearfix">
+							<div class="quiniela_iconos clearfix">
+								<img src="images/natural.png">
+								<img src="images/soccer.png">
+							</div><!-- iconos -->
+							<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
+						</div><!-- quiniela_header -->
+						<div class="quiniela_content clearfix">
+							<div class="quiniela_info clearfix">
+								<span class="registros">REG: 1,234</span>
+								<span class="cierre">CIERRE: 28.feb.2017</span>
+								<span class="limite">Limitado a 1000 entradas</span>
+							</div><!-- quiniela_info -->
+							<div class="quiniela_entrada clearfix">
+								<span class="titulo">ENTRADA</span>
+								<img src="images/billecoin.png">
+								<span class="number">$1,234</span>
+							</div>
+							<div class="quiniela_bolsa clearfix">
+								<span class="titulo">BOLSA</span>
+								<img src="images/garantizado.png">
+								<span class="number guarantee">$5,678</span>
+							</div>
+						</div><!-- quiniela_content -->
+					</div><!-- quiniela -->
+				</a><!-- link_wrapper -->
+
+				<a class="link_wrapper" href="">
+					<div class="quiniela quiniela_open nfl linea garantizado clearfix">
+						<div class="quiniela_header clearfix">
+							<div class="quiniela_iconos clearfix">
+								<img src="images/linea.png">
+								<img src="images/nfl.png">
+							</div><!-- iconos -->
+							<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
+						</div><!-- quiniela_header -->
+						<div class="quiniela_content clearfix">
+							<div class="quiniela_info clearfix">
+								<span class="registros">REG: 1,234</span>
+								<span class="cierre">CIERRE: 28.feb.2017</span>
+								<span class="limite">Limitado a 1000 entradas</span>
+							</div><!-- quiniela_info -->
+							<div class="quiniela_entrada clearfix">
+								<span class="titulo">ENTRADA</span>
+								<img src="images/billecoin.png">
+								<span class="number">$1,234</span>
+							</div>
+							<div class="quiniela_bolsa clearfix">
+								<span class="titulo">BOLSA</span>
+								<img src="images/garantizado.png">
+								<span class="number guarantee">$5,678</span>
+							</div>
+						</div><!-- quiniela_content -->
+					</div><!-- quiniela -->
+				</a><!-- link_wrapper -->
+
+				<a class="link_wrapper" href="">
+					<div class="quiniela quiniela_live nfl linea garantizado clearfix">
+						<div class="quiniela_header clearfix">
+							<div class="quiniela_iconos clearfix">
+								<img src="images/linea.png">
+								<img src="images/nfl.png">
+							</div><!-- iconos -->
+							<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
+						</div><!-- quiniela_header -->
+						<div class="quiniela_content clearfix">
+							<div class="quiniela_info clearfix">
+								<span class="registros">REG: 1,234</span>
+								<span class="cierre">CIERRE: 28.feb.2017</span>
+								<span class="limite">Limitado a 1000 entradas</span>
+							</div><!-- quiniela_info -->
+							<div class="quiniela_entrada clearfix">
+								<span class="titulo">ENTRADA</span>
+								<img src="images/billecoin.png">
+								<span class="number">$1,234</span>
+							</div>
+							<div class="quiniela_bolsa clearfix">
+								<span class="titulo">BOLSA</span>
+								<img src="images/garantizado.png">
+								<span class="number guarantee">$5,678</span>
+							</div>
+						</div><!-- quiniela_content -->
+					</div><!-- quiniela -->
+				</a><!-- link_wrapper -->
+
+				<a class="link_wrapper" href="">
+					<div class="quiniela quiniela_closed nfl linea garantizado clearfix">
+						<div class="quiniela_header clearfix">
+							<div class="quiniela_iconos clearfix">
+								<img src="images/linea.png">
+								<img src="images/nfl.png">
+							</div><!-- iconos -->
+							<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
+						</div><!-- quiniela_header -->
+						<div class="quiniela_content clearfix">
+							<div class="quiniela_info clearfix">
+								<span class="registros">REG: 1,234</span>
+								<span class="cierre">CIERRE: 28.feb.2017</span>
+								<span class="limite">Limitado a 1000 entradas</span>
+							</div><!-- quiniela_info -->
+							<div class="quiniela_entrada clearfix">
+								<span class="titulo">ENTRADA</span>
+								<img src="images/billecoin.png">
+								<span class="number">$1,234</span>
+							</div>
+							<div class="quiniela_bolsa clearfix">
+								<span class="titulo">BOLSA</span>
+								<img src="images/garantizado.png">
+								<span class="number guarantee">$5,678</span>
+							</div>
+						</div><!-- quiniela_content -->
+					</div><!-- quiniela -->
+				</a><!-- link_wrapper -->
+
+				<a class="link_wrapper" href="">
+					<div class="quiniela quiniela_otra nfl linea garantizado clearfix">
+						<div class="quiniela_header clearfix">
+							<div class="quiniela_iconos clearfix">
+								<img src="images/linea.png">
+								<img src="images/nfl.png">
+							</div><!-- iconos -->
+							<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
+						</div><!-- quiniela_header -->
+						<div class="quiniela_content clearfix">
+							<div class="quiniela_info clearfix">
+								<span class="registros">REG: 1,234</span>
+								<span class="cierre">CIERRE: 28.feb.2017</span>
+								<span class="limite">Limitado a 1000 entradas</span>
+							</div><!-- quiniela_info -->
+							<div class="quiniela_entrada clearfix">
+								<span class="titulo">ENTRADA</span>
+								<img src="images/billecoin.png">
+								<span class="number">$1,234</span>
+							</div>
+							<div class="quiniela_bolsa clearfix">
+								<span class="titulo">BOLSA</span>
+								<img src="images/garantizado.png">
+								<span class="number guarantee">$5,678</span>
+							</div>
+						</div><!-- quiniela_content -->
+					</div><!-- quiniela -->
+				</a><!-- link_wrapper -->
+
+			</div><!-- misquinielas overlay -->
 	</body>
 </html>
