Prepare to build android version 0.2

--- a/www/start.html
+++ b/www/start.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="cleartype" content="on">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
+		<script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
 		<script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
 	    <script src="js/jquery-1.12.2.min.js"></script>
 
@@ -19,16 +20,18 @@
 		</div>
 	</body>
 
-    <script type="text/javascript" src="views/compiled/container.js"></script>
+     <script type="text/javascript" src="views/compiled/container.js"></script>
     <script type="text/javascript" src="views/partials/loader.js"></script>
     <script type="text/javascript" src="views/partials/header.js"></script>
+    <script type="text/javascript" src="views/partials/footer.js"></script>
     <script type="text/javascript" src="views/compiled/login.js"></script>
     <script type="text/javascript" src="views/compiled/register.js"></script>
     <script type="text/javascript" src="views/compiled/register-success.js"></script>
     <script type="text/javascript" src="views/compiled/lobby.js"></script>
     <script type="text/javascript" src="views/partials/filters.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
-
+    <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
+    
     <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
 	<script type="text/javascript" src="js/plugins.js"></script>
 	<script type="text/javascript" src="js/oauth.js"></script>
