--- a/www/lobby.html
+++ b/www/lobby.html
@@ -1,186 +1,46 @@
-<!doctype html>
-<html>
+<!DOCTYPE HTML>
 	<head>
-		<title>Lobby | Pickwin</title>
+		<meta charset="utf-8">
+		<title>PickWin | Start</title>
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
+		<meta http-equiv="cleartype" content="on">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
+		<script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
+		<script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
+	    <script src="js/jquery-1.12.2.min.js"></script>
+
+	    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
 	</head>
-	<body>
-		<header class="clearfix">
-			<div class="user_info clearfix">
-				<img src="images/user_placeholder.png">
-				<div class="username_saldo">
-					<span class="username">Covakid</span>
-					<span class="saldo">$100.00</span>
-				</div>
-			</div>
-			<div class="filtros">
-				<img src="images/filtros.png">
-			</div>
-		</header>
-		<div class="contenedor">
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>LIGA MX S8 $1</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="quiniela clearfix">
-				<img src="images/misquinielas.png">
-				<div class="info_quiniela">
-					<div class="info_quiniela_top">
-						<h2>Nombre de la quiniela</h2>
-						<span class="fecha">24/02</span>
-					</div>
-					<div class="info_quiniela_bottom">
-						<span>$5</span>
-						<span>Reg. 35</span>
-						<span>$10,000</span>
-					</div>
-				</div>
-			</div><!-- quiniela-->
-			<div class="menu clearfix">
-				<ul>
-					<li class="selected"><img src="images/lobby.png"></li>
-					<li><img src="images/misquinielas.png"></li>
-					<li><img src="images/privadas.png"></li>
-					<li><img src="images/profile.png"></li>
-					<li><img src="images/cajero.png"></li>
-				</ul>
-			</div>
-		</div><!-- contenedor -->
+	
+	<body class="preventEvents">
+		<div id="container" class="rootContainer">
+			
+		</div>
 	</body>
+
+    <script type="text/javascript" src="views/compiled/container.js"></script>
+    <script type="text/javascript" src="views/partials/loader.js"></script>
+    <script type="text/javascript" src="views/partials/header.js"></script>
+    <script type="text/javascript" src="views/partials/footer.js"></script>
+    <script type="text/javascript" src="views/compiled/login.js"></script>
+    <script type="text/javascript" src="views/compiled/register.js"></script>
+    <script type="text/javascript" src="views/compiled/register-success.js"></script>
+    <script type="text/javascript" src="views/compiled/lobby.js"></script>
+    <script type="text/javascript" src="views/partials/filters.js"></script>
+    <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
+    <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
+    
+    <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
+	<script type="text/javascript" src="js/plugins.js"></script>
+	<script type="text/javascript" src="js/oauth.js"></script>
+	<script type="text/javascript" src="js/easing.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+	<script type="text/javascript" src="js/main.js"></script>
+	
+	<script type="text/javascript">
+		app.render_lobby();
+	</script>
+    <script type="text/javascript" src="js/scripts/document_ready.js"></script>
 </html>
