--- a/www/maqueta/login.html
+++ b/www/maqueta/login.html
@@ -2,17 +2,17 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>PickWin | Login</title>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta http-equiv="cleartype" content="on">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
-	    <script src="js/jquery-1.12.2.min.js"></script>
-		
-		<script src="js/functions.js" type="text/javascript"></script>
-		<link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
+		<title>PickWin | Start</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
+		<meta http-equiv="cleartype" content="on">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
+		<script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
+		<script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
+	    <script src="js/jquery-1.12.2.min.js"></script>
+
+	    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
 	</head>
 	<body>
 		<div class="container login">
