--- a/www/register.html
+++ b/www/register.html
@@ -7,6 +7,7 @@
 		<meta http-equiv="cleartype" content="on">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
+		<script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
 		<script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
 	    <script src="js/jquery-1.12.2.min.js"></script>
 
@@ -19,15 +20,17 @@
 		</div>
 	</body>
 
-    <script type="text/javascript" src="views/compiled/container.js"></script>
+     <script type="text/javascript" src="views/compiled/container.js"></script>
     <script type="text/javascript" src="views/partials/loader.js"></script>
     <script type="text/javascript" src="views/partials/header.js"></script>
+    <script type="text/javascript" src="views/partials/footer.js"></script>
     <script type="text/javascript" src="views/compiled/login.js"></script>
     <script type="text/javascript" src="views/compiled/register.js"></script>
     <script type="text/javascript" src="views/compiled/register-success.js"></script>
     <script type="text/javascript" src="views/compiled/lobby.js"></script>
     <script type="text/javascript" src="views/partials/filters.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
+    <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
 
     <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
 	<script type="text/javascript" src="js/plugins.js"></script>
@@ -37,8 +40,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	
 	<script type="text/javascript">
-		window.is_access = true;
-		app.initialize();
+		app.render_register();
 	</script>
     <script type="text/javascript" src="js/scripts/document_ready.js"></script>
 </html>
