--- a/www/register.html
+++ b/www/register.html
@@ -28,9 +28,11 @@
     <script type="text/javascript" src="views/compiled/register.js"></script>
     <script type="text/javascript" src="views/compiled/register-success.js"></script>
     <script type="text/javascript" src="views/compiled/lobby.js"></script>
+    <script type="text/javascript" src="views/partials/my-lobby.js"></script>
     <script type="text/javascript" src="views/partials/filters.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
+    <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
 
     <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
 	<script type="text/javascript" src="js/plugins.js"></script>
