quiniela_opciones_overlay

--- a/www/maqueta/quinielas_uno.html
+++ b/www/maqueta/quinielas_uno.html
@@ -264,7 +264,71 @@
 							</div><!-- desempate_input -->
 						</div><!-- desempate_tres -->
 				</div><!-- dempates -->
+				<div class="quiniela_registro_overlay content clearfix">
+					<div class="quiniela_registro clearfix">
+						<div class="quiniela_header clearfix">
+							<div class="quiniela_iconos clearfix">
+								<img src="images/natural.png">
+								<img src="images/soccer.png">
+							</div><!-- iconos -->
+							<h2>5678 LOREM IPSUM DOLOR SIT AMET S12</h2>
+						</div><!-- quiniela_header -->
+						<div class="no_registros clearfix">
+							<span class="pregunta">¿Cuántos registros quieres para esta quiniela?</span>
+							<select name="no_registros">
+								<option>1</option>
+								<option>2</option>
+								<option>3</option>
+								<option>4</option>
+							</select>
+						</div><!-- no_registros -->
+						<div class="copiar_picks clearfix">
+							<span class="pregunta">Utilizar los picks elegidos para todos los registros</span>
+							<input type="checkbox">
+						</div><!-- no_registros -->
+						<div class="balance clearfix">
+							<div class="disponible clearfix">
+								<p>Balance disponible:</p>
+								<div class="disponible_dinero clearfix">
+									<img src="images/billete.png">
+									<p>$1,234 MXN</p>
+								</div><!-- disponible dinero -->
+								<div class="disponible_coins">
+									<img src="images/pickcoin.png">
+									<p>1,234</p>
+								</div><!-- disponible coins -->
+							</div><!-- disponible -->
+							<div class="descontaran clearfix">
+								<p>Se descontarán:</p>
+								<div class="descontaran_dinero">
+									<img src="images/billete.png">
+									<p>$11 MXN</p>
+								</div><!-- descontaran dinero -->
+								<div class="descontaran_coins">
+									<img src="images/pickcoin.png">
+									<p>0</p>
+								</div><!-- descontaran coins -->
+							</div><!-- descontaran -->
+							<div class="total clearfix">
+								<p>Entrada:</p>
+								<div class="total_dinero">
+									<img src="images/billete.png">
+									<p>$11 MXN + $0 comisión</p>
+								</div><!-- total dinero -->
+								<div class="total_coins">
+									<img src="images/pickcoin.png">
+									<p>0 + 0 comisión</p>
+								</div><!-- total coins -->
+							</div><!-- total -->
+						</div><!-- balance -->
 
+						<div class="botones clarfix">
+							<a><img src="images/regresar.png"></a>
+							<input type="submit">
+						</div>
+					</div><!-- quiniela-registro -->
+
+				</div><!-- quiniela_registro_overlay -->
 			</div><!-- content -->
 			<div class="menu clearfix">
 				<ul>
