Footer links and mehods to render recompiled views

--- a/www/private.html
+++ b/www/private.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 	<head>
 		<meta charset="utf-8">
-		<title>PickWin | Start</title>
+		<title>PickWin | Quinielas privadas</title>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
 		<meta http-equiv="cleartype" content="on">
@@ -16,7 +16,7 @@
 	
 	<body class="preventEvents">
 		<div id="container" class="rootContainer">
-			
+			Quinielas privadas
 		</div>
 	</body>
 
@@ -45,7 +45,8 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	
 	<script type="text/javascript">
-		app.render_lobby();
+		window.is_access = true;
+		app.initialize();
 	</script>
     <script type="text/javascript" src="js/scripts/document_ready.js"></script>
 </html>
