--- a/www/start.html
+++ b/www/start.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="views/partials/filters.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
+    <script type="text/javascript" src="views/partials/quiniela-games.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
