--- a/www/maqueta/quinielas_privadas_search.html
+++ b/www/maqueta/quinielas_privadas_search.html
@@ -38,8 +38,21 @@
 					</div>
 				</div><!-- content -->
 			</div><!-- header -->
-			<div class="content quiniela_single">
-			
+			<div class="content quiniela_privada_uno">
+				<div class="busqueda_quinielas clearfix">
+					<div class="botones clearfix">
+						<a class="selected" href="">Buscar</a>
+						<a href="">Crear quiniela privada</a>
+					</div>
+					<form id="busqueda_quinielas">
+						<p>No se encontró ningún resultado relacionado con tu búsqueda, inténtalo de nuevo o crea una quiniela privada nueva.</p>
+						<input type="text" placeholder="Nombre de la quiniela">
+						<input type="text" placeholder="Código de la quiniela">
+						<div class="submit_holder">
+							<input type="submit" value="send">
+						</div>
+					</form>
+				</div>
 			</div><!-- content -->
 			<div class="menu clearfix">
 				<ul>
