Quiniela games wtf

--- a/www/deposit.html
+++ b/www/deposit.html
@@ -32,7 +32,14 @@
     <script type="text/javascript" src="views/partials/filters.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
+    <script type="text/javascript" src="views/partials/quiniela-games.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
+    <script type="text/javascript" src="views/compiled/profile.js"></script>
+    <script type="text/javascript" src="views/compiled/deposit.js"></script>
+    <script type="text/javascript" src="views/compiled/private.js"></script>
+    <script type="text/javascript" src="views/compiled/profile.js"></script>
+    <script type="text/javascript" src="views/compiled/deposit.js"></script>
+    <script type="text/javascript" src="views/compiled/private.js"></script>
     
     <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
 	<script type="text/javascript" src="js/plugins.js"></script>
