--- a/www/private.html
+++ b/www/private.html
@@ -32,7 +32,11 @@
     <script type="text/javascript" src="views/partials/filters.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
+    <script type="text/javascript" src="views/partials/quiniela-games.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
+    <script type="text/javascript" src="views/compiled/profile.js"></script>
+    <script type="text/javascript" src="views/compiled/deposit.js"></script>
+    <script type="text/javascript" src="views/compiled/private.js"></script>
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
     <script type="text/javascript" src="views/compiled/private.js"></script>
@@ -45,8 +49,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	
 	<script type="text/javascript">
-		window.is_access = true;
-		app.initialize();
+		app.render_private_games();
 	</script>
     <script type="text/javascript" src="js/scripts/document_ready.js"></script>
 </html>
