--- a/www/profile.html
+++ b/www/profile.html
@@ -28,14 +28,18 @@
     <script type="text/javascript" src="views/compiled/register.js"></script>
     <script type="text/javascript" src="views/compiled/register-success.js"></script>
     <script type="text/javascript" src="views/compiled/lobby.js"></script>
-    <script type="text/javascript" src="views/compiled/profile.js"></script>
-    <script type="text/javascript" src="views/compiled/deposit.js"></script>
-    <script type="text/javascript" src="views/compiled/private.js"></script>
     <script type="text/javascript" src="views/partials/my-lobby.js"></script>
     <script type="text/javascript" src="views/partials/filters.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
+    <script type="text/javascript" src="views/partials/quiniela-games.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
+    <script type="text/javascript" src="views/compiled/profile.js"></script>
+    <script type="text/javascript" src="views/compiled/deposit.js"></script>
+    <script type="text/javascript" src="views/compiled/private.js"></script>
+    <script type="text/javascript" src="views/compiled/profile.js"></script>
+    <script type="text/javascript" src="views/compiled/deposit.js"></script>
+    <script type="text/javascript" src="views/compiled/private.js"></script>
     
     <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
 	<script type="text/javascript" src="js/plugins.js"></script>
@@ -45,8 +49,7 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	
 	<script type="text/javascript">
-		window.is_access = true;
-		app.initialize();
+		app.render_profile();
 	</script>
     <script type="text/javascript" src="js/scripts/document_ready.js"></script>
 </html>
