--- a/www/start.html
+++ b/www/start.html
@@ -20,6 +20,7 @@
 		</div>
 	</body>
 
+    <script type="text/javascript" src="views/compiled/exoskeleton.js"></script>
     <script type="text/javascript" src="views/compiled/container.js"></script>
     <script type="text/javascript" src="views/partials/loader.js"></script>
     <script type="text/javascript" src="views/partials/header.js"></script>
