--- a/www/maqueta/profile.html
+++ b/www/maqueta/profile.html
@@ -52,40 +52,44 @@
 				<div class="tab_profile tarjetas">
 					<ul>
 						<li class="clearfix">
-							<input type="radio">
-							<img src="images/mastercard.png">
+							<input type="radio" id="mastercard" name="tarjeta">
+							<div class="check"></div>
+							<label for="mastercard" ><img src="images/mastercard.png"></label>
 							<span class="terminacion">1234</span>
 							<div class="edit_tarjeta">
 								<a href=""><img src="images/editar.png"></a>
 								<a href=""><img src="images/eliminar.png"></a>
-							</div>
+							</div>							
 						</li>
 						<li class="clearfix">
-							<input type="radio">
-							<img src="images/visa.png">
+							<input type="radio" id="visa" name="tarjeta">
+							<div class="check"></div>
+							<label for="visa" ><img src="images/visa.png"></label>
 							<span class="terminacion">1234</span>
 							<div class="edit_tarjeta">
 								<a href=""><img src="images/editar.png"></a>
 								<a href=""><img src="images/eliminar.png"></a>
-							</div>
+							</div>							
 						</li>
 						<li class="clearfix">
-							<input type="radio">
-							<img src="images/amex.png">
+							<input type="radio" id="amex" name="tarjeta">
+							<div class="check"></div>
+							<label for="amex" ><img src="images/amex.png"></label>
 							<span class="terminacion">1234</span>
 							<div class="edit_tarjeta">
 								<a href=""><img src="images/editar.png"></a>
 								<a href=""><img src="images/eliminar.png"></a>
-							</div>
+							</div>							
 						</li>
 						<li class="clearfix">
-							<input type="radio">
-							<img src="images/paypal.png">
+							<input type="radio" id="paypal" name="tarjeta">
+							<div class="check"></div>
+							<label for="paypal" ><img src="images/paypal.png"></label>
 							<span class="terminacion">mail@mail.com</span>
 							<div class="edit_tarjeta">
 								<a href=""><img src="images/editar.png"></a>
 								<a href=""><img src="images/eliminar.png"></a>
-							</div>
+							</div>							
 						</li>
 					</ul>
 					<a class="agregar_tarjeta" href=""><img src="images/agregar_tarjeta.png"></a>
@@ -109,7 +113,10 @@
 						</div>
 					</form>
 				</div>
-				
+				<div class="legales clearfix">
+					<a class="link_legal" onclick="window.open('https://www.pickwin.net/terminos-y-condiciones', '_blank', 'location=yes')" >Términos y condiciones | </a>
+					<a class="link_legal" onclick="window.open('https://www.pickwin.net/aviso-de-privacidad', '_blank', 'location=yes')" >Política de privacidad</a>
+				</div>
 			</div><!-- content -->
 			<div class="menu clearfix">
 				<ul>
