--- a/www/maqueta/login.html
+++ b/www/maqueta/login.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
 		<meta http-equiv="cleartype" content="on">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
 		<script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
 		<script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
