--- a/www/lobby.html
+++ b/www/lobby.html
@@ -19,7 +19,8 @@
 			
 		</div>
 	</body>
-
+	
+	<script type="text/javascript" src="views/compiled/exoskeleton.js"></script>
     <script type="text/javascript" src="views/compiled/container.js"></script>
     <script type="text/javascript" src="views/partials/loader.js"></script>
     <script type="text/javascript" src="views/partials/header.js"></script>
