Recompile partials and explicit closed game indicator

--- a/www/start.html
+++ b/www/start.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
     <script type="text/javascript" src="views/compiled/private.js"></script>
+    <script type="text/javascript" src="views/compiled/private-create.js"></script>
     
     <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
 	<script type="text/javascript" src="js/plugins.js"></script>
