--- a/www/start.html
+++ b/www/start.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 	<head>
 		<meta charset="utf-8">
-		<title>PickWin | Start</title>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
-        <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval'; img-src *">
-		<meta http-equiv="cleartype" content="on">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://googleapis.com/* *openpay.s3.amazonaws.com* 'unsafe-inline' 'unsafe-eval'; img-src *">
+        <meta http-equiv="cleartype" content="on">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
+        <title>PickWin | Start</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
 		<script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
