--- a/www/start.html
+++ b/www/start.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 	<head>
 		<meta charset="utf-8">
-        <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://googleapis.com/* *openpay.s3.amazonaws.com* 'unsafe-inline' 'unsafe-eval'; img-src *">
+        <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://googleapis.com/ https://openpay.s3.amazonaws.com 'unsafe-inline' 'unsafe-eval'; img-src *">
         <meta http-equiv="cleartype" content="on">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, maximum-scale=1, minimum-scale=1">
