Initial pool sort and show indicator of live games in the lobby

--- a/www/start.html
+++ b/www/start.html
@@ -31,12 +31,14 @@
     <script type="text/javascript" src="views/compiled/forgot-password.js"></script>
     <script type="text/javascript" src="views/compiled/password-link-sent.js"></script>
     <script type="text/javascript" src="views/compiled/lobby.js"></script>
+    <script type="text/javascript" src="views/compiled/lobby-feed.js"></script>
     <script type="text/javascript" src="views/partials/my-lobby.js"></script>
     <script type="text/javascript" src="views/partials/filters.js"></script>
     <script type="text/javascript" src="views/partials/each-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/each-my-quiniela.js"></script>
     <script type="text/javascript" src="views/partials/quiniela-games.js"></script>
     <script type="text/javascript" src="views/compiled/detail-quiniela.js"></script>
+    <script type="text/javascript" src="views/compiled/detail-quiniela-registered.js"></script>
     <script type="text/javascript" src="views/compiled/profile.js"></script>
     <script type="text/javascript" src="views/compiled/deposit.js"></script>
     <script type="text/javascript" src="views/compiled/deposit-stores.js"></script>
@@ -53,6 +55,7 @@
     <script type="text/javascript" src="js/plugins.js"></script>
     <script type="text/javascript" src="https://openpay.s3.amazonaws.com/openpay.v1.min.js"></script>
     <script type="text/javascript" src="js/easing.js"></script>
+    <script type="text/javascript" src="js/bower_components/thenby/thenBy.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	
 	<script type="text/javascript">
