Search private quinielas integration and payment methods add new card and fetch transaction history

--- a/www/maqueta/quinielas_privadas_search.html
+++ b/www/maqueta/quinielas_privadas_search.html
@@ -44,7 +44,7 @@
 						<a class="selected" href="">Buscar</a>
 						<a href="">Crear quiniela privada</a>
 					</div>
-					<form id="busqueda_quinielas">
+					<form id="busquedaQuinielas">
 						<p>No se encontró ningún resultado relacionado con tu búsqueda, inténtalo de nuevo o crea una quiniela privada nueva.</p>
 						<input type="text" placeholder="Nombre de la quiniela">
 						<input type="text" placeholder="Código de la quiniela">
