--- a/www/start.html
+++ b/www/start.html
@@ -48,6 +48,7 @@
     <script type="text/javascript" src="views/compiled/profile-history.js"></script>
     <script type="text/javascript" src="views/compiled/profile-notifications.js"></script>
     <script type="text/javascript" src="views/compiled/private.js"></script>
+    <script type="text/javascript" src="views/partials/search-results.js"></script>
     <script type="text/javascript" src="views/compiled/private-create.js"></script>
     
     <script type="text/javascript" src="cordova.js"></script>
