radio group partidos

--- a/www/maqueta/quiniela_registrada.html
+++ b/www/maqueta/quiniela_registrada.html
@@ -103,82 +103,105 @@
 						<span>EMPATE</span>
 						<span>VISITA</span>
 					</div><!-- opciones_partido -->
-					<div class="partido partido_en_vivo radio_group clearfix">
-						<div class="opcion_partido local clearfix">
+					<div class="partido partido_en_vivo clearfix">
+						<div class="opcion_partido local radio_group clearfix">
+							<input type="radio" name="ganador_uno" id="ganador_local_uno" value="">
 							<div class="check"></div>
-							<input type="radio" name="ganador_uno" id="local">
-							<img src="images/camisaverde.png">
-							<div class="equipo">
-								<span class="iniciales">ABC</span>
-							</div><!-- equipo -->
-							<div class="linea">
-								<span>(+4) 123</span>
-							</div><!-- linea -->
+							<label for="ganador_local_uno">
+								
+								<img src="images/camisaverde.png">
+								<div class="equipo">
+									<span class="iniciales">ABC</span>
+								</div><!-- equipo -->
+								<div class="linea">
+									<span>(+4) 123</span>
+								</div><!-- linea -->
+							</label>
+
 						</div><!-- opcion_partido -->
 						<div class="opcion_partido cierre clearfix">
 							<span>EN VIVO</span>
 						</div><!-- opcion_partido -->
-						<div class="opcion_partido visitante clearfix">
-							<input type="radio" name="ganador_uno" id="visitante">
-							<img src="images/camisaazul.png">
-							<div class="equipo">
-								<span class="iniciales">ABC</span>
-							</div><!-- equipo -->
-							<div class="linea">
-								<span>(+4) 123</span>
-							</div><!-- linea -->
+						<div class="opcion_partido radio_group visitante clearfix">
+							<input type="radio" name="ganador_uno" id="ganador_visitante_uno">
+							<div class="check"></div>
+							<label for="ganador_visitante_uno">
+								<img src="images/camisaazul.png">
+								<div class="equipo">
+									<span class="iniciales">ABC</span>
+								</div><!-- equipo -->
+								<div class="linea">
+									<span>(+4) 123</span>
+								</div><!-- linea -->
+							</label>
 						</div><!-- opcion_partido -->
 					</div><!-- partido -->
 					<div class="partido partido_finalizado clearfix">
-						<div class="opcion_partido local clearfix">
-							<input type="radio" name="ganador_dos" id="local">
-							<img src="images/camisablanca.png">
-							<div class="equipo">
-								<span class="iniciales">ABC</span>
-							</div><!-- equipo -->
-							<div class="linea">
-								<span>(+4) 123</span>
-							</div><!-- linea -->
+						<div class="opcion_partido local radio_group clearfix">
+							<input type="radio" name="ganador_dos" id="ganador_local_dos" value="">
+							<div class="check"></div>
+							<label for="ganador_local_dos">
+								
+								<img src="images/camisaverde.png">
+								<div class="equipo">
+									<span class="iniciales">ABC</span>
+								</div><!-- equipo -->
+								<div class="linea">
+									<span>(+4) 123</span>
+								</div><!-- linea -->
+							</label>
+
 						</div><!-- opcion_partido -->
-						<div class="opcion_partido empate cierre clearfix">
-							<input type="radio" name="ganador_dos" id="empate">
+						<div class="opcion_partido cierre clearfix">
 							<span>FINALIZADO</span>
 						</div><!-- opcion_partido -->
-						<div class="opcion_partido visitante clearfix">
-							<input type="radio" name="ganador_dos" id="visitante">
-							<img src="images/camisaazul.png">
-							<div class="equipo">
-								<span class="iniciales">ABC</span>
-							</div><!-- equipo -->
-							<div class="linea">
-								<span>(+4) 123</span>
-							</div><!-- linea -->
+						<div class="opcion_partido radio_group visitante clearfix">
+							<input type="radio" name="ganador_dos" id="ganador_visitante_dos">
+							<div class="check"></div>
+							<label for="ganador_visitante_dos">
+								<img src="images/camisaazul.png">
+								<div class="equipo">
+									<span class="iniciales">ABC</span>
+								</div><!-- equipo -->
+								<div class="linea">
+									<span>(+4) 123</span>
+								</div><!-- linea -->
+							</label>
 						</div><!-- opcion_partido -->
 					</div><!-- partido -->
 					<div class="partido clearfix">
-						<div class="opcion_partido local clearfix">
-							<input type="radio" name="ganador_tres" id="local">
-							<img src="images/camisaamarilla.png">
-							<div class="equipo">
-								<span class="iniciales">ABC</span>
-							</div><!-- equipo -->
-							<div class="linea">
-								<span>(+4) 123</span>
-							</div><!-- linea -->
+						<div class="opcion_partido radio_group local clearfix">
+							<input type="radio" name="ganador_tres" id="ganador_local_tres">
+							<div class="check"></div>
+							<label for="ganador_local_tres">
+								<img src="images/camisaamarilla.png">
+								<div class="equipo">
+									<span class="iniciales">ABC</span>
+								</div><!-- equipo -->
+								<div class="linea">
+									<span>(+4) 123</span>
+								</div><!-- linea -->
+							</label>
 						</div><!-- opcion_partido -->
-						<div class="opcion_partido empate cierre clearfix">
-							<input type="radio" name="ganador_tres" id="empate">
-							<span>CIERRE: 28.feb.17</span>
+						<div class="opcion_partido empate radio_group cierre clearfix">
+							<input type="radio" name="ganador_tres" id="empate_tres">
+							<div class="check"></div>
+							<label for="empate_tres">
+								<span>CIERRE: 28.feb.17</span>
+							</label>
 						</div><!-- opcion_partido -->
-						<div class="opcion_partido visitante clearfix">
-							<input type="radio" name="ganador_tres" id="visitante">
-							<img src="images/camisaroja.png">
-							<div class="equipo">
-								<span class="iniciales">ABC</span>
-							</div><!-- equipo -->
-							<div class="linea">
-								<span>(+4) 123</span>
-							</div><!-- linea -->
+						<div class="opcion_partido visitante radio_group clearfix">
+							<input type="radio" name="ganador_tres" id="ganador_visitante_tres">
+							<div class="check"></div>
+							<label for="ganador_visitante_tres">
+								<img src="images/camisaroja.png">
+								<div class="equipo">
+									<span class="iniciales">ABC</span>
+								</div><!-- equipo -->
+								<div class="linea">
+									<span>(+4) 123</span>
+								</div><!-- linea -->
+							</label>
 						</div><!-- opcion_partido -->
 					</div><!-- partido -->
 				</div><!-- partidos -->
