New plugin dialogs, profile add new card and delete card working

--- a/www/start.html
+++ b/www/start.html
@@ -55,6 +55,7 @@
     <script type="text/javascript" src="js/api-sdk-1.0.js"></script>
     <script type="text/javascript" src="js/plugins.js"></script>
     <script type="text/javascript" src="https://openpay.s3.amazonaws.com/openpay.v1.min.js"></script>
+    <script type='text/javascript' src="https://openpay.s3.amazonaws.com/openpay-data.v1.min.js"></script>
     <script type="text/javascript" src="js/easing.js"></script>
     <script type="text/javascript" src="js/bower_components/thenby/thenBy.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
