Bower dependencies update, detail quiniela registered

--- a/www/start.html
+++ b/www/start.html
@@ -10,9 +10,8 @@
         <script type="text/javascript" src="js/bower_components/fingerprintjs2/dist/fingerprint2.min.js"></script>
         <script type="text/javascript" src="js/bower_components/handlebars/handlebars.min.js"></script>
         <script type="text/javascript" src="js/bower_components/moment/min/moment-with-locales.min.js"></script>
-        <script type="text/javascript" src="js/bower_components/countdownjs/countdown.min.js"></script>
-        <script type="text/javascript" src="js/bower_components/moment-countdown/dist/moment-countdown.min.js"></script>
         <script src="js/jquery-1.12.2.min.js"></script>
+        <script type="text/javascript" src="js/bower_components/jquery.countdown/dist/jquery.countdown.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700,700i" rel="stylesheet">
     </head>
     
