más radio buttons

--- a/www/maqueta/quiniela_registrada.html
+++ b/www/maqueta/quiniela_registrada.html
@@ -210,13 +210,19 @@
 					<div class="prop">
 						<h3>¿Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer aliqua?</h3>
 						<div class="opciones_prop dos_opciones clearfix">
-							<div class="opcion_prop clearfix">
-								<input type="radio" name="prop_uno" vlaue="si">
-								<span>SI</span>
+							<div class="opcion_prop radio_group clearfix">
+								<input type="radio" id="respuesta_prop_uno_si" name="prop_uno" vlaue="si">
+								<div class="check"></div>
+								<label for="respuesta_prop_uno_si">
+									<span>SI</span>
+								</label>
 							</div><!-- opcion_prop clearfix -->
-							<div class="opcion_prop clearfix">
-								<input type="radio" name="prop_uno" value="no">
-								<span>NO</span>
+							<div class="opcion_prop radio_group clearfix">
+								<input type="radio" name="prop_uno" id="respuesta_prop_uno_no" value="no">
+								<div class="check"></div>
+								<label for="respuesta_prop_uno_no">
+									<span>NO</span>
+								</label>
 							</div><!-- opcion_prop clearfix -->
 						</div><!-- opciones_prop dos_opciones -->
 					</div><!-- prop -->
