--- a/www/maqueta/quiniela_registrada.html
+++ b/www/maqueta/quiniela_registrada.html
@@ -229,20 +229,29 @@
 					<div class="prop clearfix">
 						<h3>¿Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer aliqua?</h3>
 						<div class="opciones_prop tres_opciones clearfix">
-							<div class="opcion_prop clearfix">
-								<input type="radio" name="prop_dos" vlaue="ame">
-								<img src="images/camisaamarilla.png">
-								<span>AME</span>
+							<div class="opcion_prop radio_group clearfix">
+								<input type="radio" name="prop_dos" id="prop_dos_respuesta_uno" vlaue="ame">
+								<div class="check"></div>
+								<label for="prop_dos_respuesta_uno">
+									<img src="images/camisaamarilla.png">
+									<span>AME</span>
+								</label>
 							</div><!-- opcion_prop clearfix -->
-							<div class="opcion_prop clearfix">
-								<input type="radio" name="prop_dos" vlaue="caz">
-								<img src="images/camisaroja.png">
-								<span>CAZ</span>
-							</div><!-- opcion_prop clearfix -->
-							<div class="opcion_prop clearfix">
-								<input type="radio" name="prop_dos" vlaue="gua">
-								<img src="images/camisaverde.png">
-								<span>GUA</span>
+							<div class="opcion_prop radio_group clearfix">
+								<input type="radio" name="prop_dos" id="prop_dos_respuesta_dos" vlaue="caz">
+								<div class="check"></div>
+								<label for="prop_dos_respuesta_dos">
+									<img src="images/camisaroja.png">
+									<span>CAZ</span>
+								</label>
+							</div><!-- opcion_prop radio_group clearfix -->
+							<div class="opcion_prop radio_group clearfix">
+								<input type="radio" name="prop_dos" id="prop_dos_respuesta_tres" vlaue="gua">
+								<div class="check"></div>
+								<label for="prop_dos_respuesta_tres">
+									<img src="images/camisaverde.png">
+									<span>GUA</span>
+								</label>
 							</div><!-- opcion_prop clearfix -->
 						</div><!-- opciones_prop tres_opciones -->
 					</div><!-- prop -->
